--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -416,6 +416,7 @@
     <TypeScriptCompile Include="wwwroot\Common\login\views\forgotPsw-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\confirmRegister-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\changePasssword-bs.tsx" />
+    <TypeScriptCompile Include="wwwroot\Common\login\views\emailRegister.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\register-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\login-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\home-bs.tsx" />
