--- a/TheWeb/Web.config
+++ b/TheWeb/Web.config
@@ -21,4 +21,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.net>
+    <mailSettings>
+      <smtp from="test@domain.com">
+        <network host="smtp.sendgrid.net" password="CZ.langmaster1" userName="langmaster-email" port="587" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
