--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -409,16 +409,17 @@
     <TypeScriptCompile Include="wwwroot\Common\lib\oauth.ts" />
     <TypeScriptCompile Include="wwwroot\Common\login\auth.ts" />
     <TypeScriptCompile Include="wwwroot\Common\login\dispatcher.ts" />
-    <TypeScriptCompile Include="wwwroot\Common\login\index.ts" />
+    <TypeScriptCompile Include="wwwroot\Common\login\lmlogin.tsx" />
+    <TypeScriptCompile Include="wwwroot\Common\login\register.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\test.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\editProfile-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\confirmForgotPsw-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\forgotPsw-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\confirmRegister-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\changePasssword-bs.tsx" />
-    <TypeScriptCompile Include="wwwroot\Common\login\views\emailRegister.tsx" />
+    <TypeScriptCompile Include="wwwroot\Common\login\views\lmlogin-bs.tsx" />
+    <TypeScriptCompile Include="wwwroot\Common\login\views\register-email.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\register-bs.tsx" />
-    <TypeScriptCompile Include="wwwroot\Common\login\views\login-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\home-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\login\views\panel.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\startProcs.ts" />
