--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -131,37 +131,99 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="wwwroot\Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
+    <Content Include="wwwroot\Content\bootstrap\wells.less" />
+    <Content Include="wwwroot\Content\bootstrap\variables.less" />
+    <Content Include="wwwroot\Content\bootstrap\utilities.less" />
+    <Content Include="wwwroot\Content\bootstrap\type.less" />
+    <Content Include="wwwroot\Content\bootstrap\tooltip.less" />
+    <Content Include="wwwroot\Content\bootstrap\thumbnails.less" />
+    <Content Include="wwwroot\Content\bootstrap\theme.less" />
+    <Content Include="wwwroot\Content\bootstrap\tables.less" />
+    <Content Include="wwwroot\Content\bootstrap\scaffolding.less" />
+    <Content Include="wwwroot\Content\bootstrap\responsive-utilities.less" />
+    <Content Include="wwwroot\Content\bootstrap\responsive-embed.less" />
+    <Content Include="wwwroot\Content\bootstrap\progress-bars.less" />
+    <Content Include="wwwroot\Content\bootstrap\print.less" />
+    <Content Include="wwwroot\Content\bootstrap\popovers.less" />
+    <Content Include="wwwroot\Content\bootstrap\panels.less" />
+    <Content Include="wwwroot\Content\bootstrap\pagination.less" />
+    <Content Include="wwwroot\Content\bootstrap\pager.less" />
+    <Content Include="wwwroot\Content\bootstrap\normalize.less" />
+    <Content Include="wwwroot\Content\bootstrap\navs.less" />
+    <Content Include="wwwroot\Content\bootstrap\navbar.less" />
+    <Content Include="wwwroot\Content\bootstrap\modals.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\vendor-prefixes.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\text-overflow.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\text-emphasis.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\table-row.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\tab-focus.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\size.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\responsive-visibility.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\resize.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\reset-text.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\reset-filter.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\progress-bar.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\panels.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\pagination.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\opacity.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\nav-vertical-align.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\nav-divider.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\list-group.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\labels.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\image.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\hide-text.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\grid.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\grid-framework.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\gradients.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\forms.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\clearfix.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\center-block.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\buttons.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\border-radius.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\background-variant.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins\alerts.less" />
+    <Content Include="wwwroot\Content\bootstrap\mixins.less" />
+    <Content Include="wwwroot\Content\bootstrap\media.less" />
+    <Content Include="wwwroot\Content\bootstrap\list-group.less" />
+    <Content Include="wwwroot\Content\bootstrap\labels.less" />
+    <Content Include="wwwroot\Content\bootstrap\jumbotron.less" />
+    <Content Include="wwwroot\Content\bootstrap\input-groups.less" />
+    <Content Include="wwwroot\Content\bootstrap\grid.less" />
+    <Content Include="wwwroot\Content\bootstrap\glyphicons.less" />
+    <Content Include="wwwroot\Content\bootstrap\forms.less" />
+    <Content Include="wwwroot\Content\bootstrap\dropdowns.less" />
+    <Content Include="wwwroot\Content\bootstrap\component-animations.less" />
+    <Content Include="wwwroot\Content\bootstrap\code.less" />
+    <Content Include="wwwroot\Content\bootstrap\close.less" />
+    <Content Include="wwwroot\Content\bootstrap\carousel.less" />
+    <Content Include="wwwroot\Content\bootstrap\buttons.less" />
+    <Content Include="wwwroot\Content\bootstrap\button-groups.less" />
+    <Content Include="wwwroot\Content\bootstrap\breadcrumbs.less" />
+    <Content Include="wwwroot\Content\bootstrap\bootstrap.less" />
+    <Content Include="wwwroot\Content\bootstrap\badges.less" />
+    <Content Include="wwwroot\Content\bootstrap\alerts.less" />
+    <Content Include="wwwroot\Content\fonts\FontAwesome.otf" />
+    <Content Include="wwwroot\Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="wwwroot\Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="wwwroot\Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="wwwroot\Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="wwwroot\Content\fontawesome\variables.less" />
+    <Content Include="wwwroot\Content\fontawesome\stacked.less" />
+    <Content Include="wwwroot\Content\fontawesome\rotated-flipped.less" />
+    <Content Include="wwwroot\Content\fontawesome\path.less" />
+    <Content Include="wwwroot\Content\fontawesome\mixins.less" />
+    <Content Include="wwwroot\Content\fontawesome\list.less" />
+    <Content Include="wwwroot\Content\fontawesome\larger.less" />
+    <Content Include="wwwroot\Content\fontawesome\icons.less" />
+    <Content Include="wwwroot\Content\fontawesome\font-awesome.less" />
+    <Content Include="wwwroot\Content\fontawesome\fixed-width.less" />
+    <Content Include="wwwroot\Content\fontawesome\core.less" />
+    <Content Include="wwwroot\Content\fontawesome\bordered-pulled.less" />
+    <Content Include="wwwroot\Content\fontawesome\animated.less" />
     <None Include="JSON.json" />
     <Content Include="Web.config" />
-    <Content Include="wwwroot\bs3\css\bootstrap-rtl.css" />
-    <Content Include="wwwroot\bs3\css\_Bootstrap.css" />
-    <Content Include="wwwroot\bs3\css\_Bootstrap.min.css" />
-    <Content Include="wwwroot\bs3\js\affix.js" />
-    <Content Include="wwwroot\bs3\js\alert.js" />
-    <Content Include="wwwroot\bs3\js\button.js" />
-    <Content Include="wwwroot\bs3\js\carousel.js" />
-    <Content Include="wwwroot\bs3\js\collapse.js" />
-    <Content Include="wwwroot\bs3\js\dropdown.js" />
-    <Content Include="wwwroot\bs3\js\modal.js" />
-    <Content Include="wwwroot\bs3\js\popover.js" />
-    <Content Include="wwwroot\bs3\js\scrollspy.js" />
-    <Content Include="wwwroot\bs3\js\tab.js" />
-    <Content Include="wwwroot\bs3\js\tooltip.js" />
-    <Content Include="wwwroot\bs3\js\transition.js" />
-    <Content Include="wwwroot\bs3\less\bootsWatch-flatly\variables.css" />
-    <Content Include="wwwroot\bs3\less\RTL\button-groups-rtl.css" />
-    <Content Include="wwwroot\bs3\less\RTL\button-groups-rtl.min.css" />
-    <Content Include="wwwroot\bs3\less\RTL\grid-rtl.css" />
-    <Content Include="wwwroot\bs3\less\RTL\grid-rtl.min.css" />
-    <Content Include="wwwroot\bs3\less\RTL\lm-rtl.css" />
-    <Content Include="wwwroot\bs3\less\RTL\lm-rtl.min.css" />
-    <Content Include="wwwroot\bs3\less\RTL\merged-rtl.css" />
-    <Content Include="wwwroot\bs3\less\RTL\merged-rtl.min.css" />
-    <Content Include="wwwroot\bs3\less\RTL\type-rtl.css" />
-    <Content Include="wwwroot\bs3\less\RTL\type-rtl.min.css" />
-    <Content Include="wwwroot\bs3\less\RTL\variables.css" />
-    <Content Include="wwwroot\bs3\less\RTL\variables.min.css" />
     <Content Include="wwwroot\Common\closure\cookies.js" />
     <Content Include="wwwroot\Common\closure\crypt.js" />
     <Content Include="wwwroot\Common\closure\sha1.js" />
@@ -196,14 +258,6 @@
     <Content Include="wwwroot\deploy\web4\mins\zh-cn.min.js" />
     <Content Include="wwwroot\deploy\web\mins\common.min.js" />
     <Content Include="wwwroot\deploy\web\mins\externals.min.js" />
-    <Content Include="wwwroot\font-awesome\css\font-awesome.css" />
-    <Content Include="wwwroot\font-awesome\css\font-awesome.min.css" />
-    <Content Include="wwwroot\font-awesome\css\_font-awesome.css" />
-    <Content Include="wwwroot\font-awesome\css\_font-awesome.min.css" />
-    <Content Include="wwwroot\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="wwwroot\font-awesome\lm\externals-bootsWatch-flatly.css" />
-    <Content Include="wwwroot\font-awesome\lm\externals.css" />
-    <Content Include="wwwroot\font-awesome\lm\externals.min.css" />
     <Content Include="wwwroot\Material\material.css" />
     <Content Include="wwwroot\Material\material.js" />
     <Content Include="wwwroot\scripts\core.js" />
@@ -213,6 +267,8 @@
     <Content Include="wwwroot\TestPlaylists\fullTest.json" />
     <Content Include="wwwroot\deploy\web\js-tests.dpl.json" />
     <Content Include="wwwroot\TestPlaylists\noname.json" />
+    <Content Include="wwwroot\bs.less" />
+    <Content Include="wwwroot\deploy\web\cssskin-bs.dpl.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\AppConfig.cs" />
@@ -241,84 +297,6 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <Content Include="wwwroot\bs3\less\alerts.less" />
-    <Content Include="wwwroot\bs3\less\badges.less" />
-    <Content Include="wwwroot\bs3\less\bootstrap-externals.less" />
-    <Content Include="wwwroot\bs3\less\bootstrap.less" />
-    <Content Include="wwwroot\bs3\less\bootsWatch-flatly\bootswatch.less" />
-    <Content Include="wwwroot\bs3\less\bootsWatch-flatly\variables.less" />
-    <Content Include="wwwroot\bs3\less\breadcrumbs.less" />
-    <Content Include="wwwroot\bs3\less\button-groups.less" />
-    <Content Include="wwwroot\bs3\less\buttons.less" />
-    <Content Include="wwwroot\bs3\less\carousel.less" />
-    <Content Include="wwwroot\bs3\less\close.less" />
-    <Content Include="wwwroot\bs3\less\code.less" />
-    <Content Include="wwwroot\bs3\less\component-animations.less" />
-    <Content Include="wwwroot\bs3\less\dropdowns.less" />
-    <Content Include="wwwroot\bs3\less\forms.less" />
-    <Content Include="wwwroot\bs3\less\grid.less" />
-    <Content Include="wwwroot\bs3\less\input-groups.less" />
-    <Content Include="wwwroot\bs3\less\jumbotron.less" />
-    <Content Include="wwwroot\bs3\less\labels.less" />
-    <Content Include="wwwroot\bs3\less\list-group.less" />
-    <Content Include="wwwroot\bs3\less\media.less" />
-    <Content Include="wwwroot\bs3\less\mixins.less" />
-    <Content Include="wwwroot\bs3\less\mixins\alerts.less" />
-    <Content Include="wwwroot\bs3\less\mixins\background-variant.less" />
-    <Content Include="wwwroot\bs3\less\mixins\border-radius.less" />
-    <Content Include="wwwroot\bs3\less\mixins\buttons.less" />
-    <Content Include="wwwroot\bs3\less\mixins\center-block.less" />
-    <Content Include="wwwroot\bs3\less\mixins\clearfix.less" />
-    <Content Include="wwwroot\bs3\less\mixins\forms.less" />
-    <Content Include="wwwroot\bs3\less\mixins\gradients.less" />
-    <Content Include="wwwroot\bs3\less\mixins\grid-framework.less" />
-    <Content Include="wwwroot\bs3\less\mixins\grid.less" />
-    <Content Include="wwwroot\bs3\less\mixins\hide-text.less" />
-    <Content Include="wwwroot\bs3\less\mixins\image.less" />
-    <Content Include="wwwroot\bs3\less\mixins\labels.less" />
-    <Content Include="wwwroot\bs3\less\mixins\list-group.less" />
-    <Content Include="wwwroot\bs3\less\mixins\nav-divider.less" />
-    <Content Include="wwwroot\bs3\less\mixins\nav-vertical-align.less" />
-    <Content Include="wwwroot\bs3\less\mixins\opacity.less" />
-    <Content Include="wwwroot\bs3\less\mixins\pagination.less" />
-    <Content Include="wwwroot\bs3\less\mixins\panels.less" />
-    <Content Include="wwwroot\bs3\less\mixins\progress-bar.less" />
-    <Content Include="wwwroot\bs3\less\mixins\reset-filter.less" />
-    <Content Include="wwwroot\bs3\less\mixins\resize.less" />
-    <Content Include="wwwroot\bs3\less\mixins\responsive-visibility.less" />
-    <Content Include="wwwroot\bs3\less\mixins\size.less" />
-    <Content Include="wwwroot\bs3\less\mixins\tab-focus.less" />
-    <Content Include="wwwroot\bs3\less\mixins\table-row.less" />
-    <Content Include="wwwroot\bs3\less\mixins\text-emphasis.less" />
-    <Content Include="wwwroot\bs3\less\mixins\text-overflow.less" />
-    <Content Include="wwwroot\bs3\less\mixins\vendor-prefixes.less" />
-    <Content Include="wwwroot\bs3\less\modals.less" />
-    <Content Include="wwwroot\bs3\less\navbar.less" />
-    <Content Include="wwwroot\bs3\less\navs.less" />
-    <Content Include="wwwroot\bs3\less\normalize.less" />
-    <Content Include="wwwroot\bs3\less\pager.less" />
-    <Content Include="wwwroot\bs3\less\pagination.less" />
-    <Content Include="wwwroot\bs3\less\panels.less" />
-    <Content Include="wwwroot\bs3\less\popovers.less" />
-    <Content Include="wwwroot\bs3\less\print.less" />
-    <Content Include="wwwroot\bs3\less\progress-bars.less" />
-    <Content Include="wwwroot\bs3\less\responsive-embed.less" />
-    <Content Include="wwwroot\bs3\less\responsive-utilities.less" />
-    <Content Include="wwwroot\bs3\less\RTL\button-groups-rtl.less" />
-    <Content Include="wwwroot\bs3\less\RTL\grid-rtl.less" />
-    <Content Include="wwwroot\bs3\less\RTL\lm-rtl.less" />
-    <Content Include="wwwroot\bs3\less\RTL\merged-rtl.less" />
-    <Content Include="wwwroot\bs3\less\RTL\type-rtl.less" />
-    <Content Include="wwwroot\bs3\less\RTL\variables.less" />
-    <Content Include="wwwroot\bs3\less\scaffolding.less" />
-    <Content Include="wwwroot\bs3\less\tables.less" />
-    <Content Include="wwwroot\bs3\less\theme.less" />
-    <Content Include="wwwroot\bs3\less\thumbnails.less" />
-    <Content Include="wwwroot\bs3\less\tooltip.less" />
-    <Content Include="wwwroot\bs3\less\type.less" />
-    <Content Include="wwwroot\bs3\less\utilities.less" />
-    <Content Include="wwwroot\bs3\less\variables.less" />
-    <Content Include="wwwroot\bs3\less\wells.less" />
     <Content Include="wwwroot\Common\closure\js.dpl.json" />
     <Content Include="wwwroot\Common\lib\js.dpl.json" />
     <Content Include="wwwroot\Common\login\js.dpl.json" />
@@ -361,38 +339,14 @@
     <Content Include="wwwroot\deploy\web\jsmin.dpl.json" />
     <Content Include="wwwroot\deploy\web\jsskin-bs.dpl.json" />
     <Content Include="wwwroot\deploy\web\jsskin-mdl.dpl.json" />
-    <Content Include="wwwroot\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="wwwroot\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="wwwroot\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="wwwroot\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="wwwroot\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="wwwroot\font-awesome\less\animated.less" />
-    <Content Include="wwwroot\font-awesome\less\bordered-pulled.less" />
-    <Content Include="wwwroot\font-awesome\less\core.less" />
-    <Content Include="wwwroot\font-awesome\less\fixed-width.less" />
-    <Content Include="wwwroot\font-awesome\less\font-awesome.less" />
-    <Content Include="wwwroot\font-awesome\less\icons.less" />
-    <Content Include="wwwroot\font-awesome\less\larger.less" />
-    <Content Include="wwwroot\font-awesome\less\list.less" />
-    <Content Include="wwwroot\font-awesome\less\mixins.less" />
-    <Content Include="wwwroot\font-awesome\less\path.less" />
-    <Content Include="wwwroot\font-awesome\less\rotated-flipped.less" />
-    <Content Include="wwwroot\font-awesome\less\stacked.less" />
-    <Content Include="wwwroot\font-awesome\less\variables.less" />
-    <Content Include="wwwroot\font-awesome\lm\externals-bootsWatch-flatly.less" />
-    <Content Include="wwwroot\font-awesome\lm\externals.less" />
     <Content Include="wwwroot\scripts\js.dpl.json" />
     <Content Include="wwwroot\tsconfig.json" />
     <Content Include="wwwroot\Web.config" />
     <Content Include="wwwroot\swfiles.zip" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\bs3\less\1pxdeep\" />
-    <Folder Include="wwwroot\bs3\less\lavish\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <TypeScriptCompile Include="wwwroot\app-test\testHome.tsx" />
-    <TypeScriptCompile Include="wwwroot\bs3\js\bootstrap.d.ts" />
     <TypeScriptCompile Include="wwwroot\Common\closure\cookies.d.ts" />
     <TypeScriptCompile Include="wwwroot\Common\closure\crypt.d.ts" />
     <TypeScriptCompile Include="wwwroot\Common\closure\hash.d.ts" />
