--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -308,6 +308,7 @@
     <Content Include="Licenses\v8.strongtalk.license" />
     <Content Include="Licenses\v8.main.license" />
     <Content Include="Licenses\ClearScript.main.license" />
+    <Content Include="Temp\CSS-schema.xml" />
     <Content Include="Temp\printPdf.ps1" />
     <TypeScriptCompile Include="AuthorWeb\js\compRenderTag.ts" />
     <TypeScriptCompile Include="AuthorWeb\js\encodeLib.ts" />
@@ -1505,6 +1506,7 @@
     <Content Include="Temp\mediumJS\rangy-textrange.js" />
     <Content Include="Temp\mediumJS\undo.js" />
     <Content Include="Temp\StyleSheet1.css" />
+    <Content Include="Temp\StyleSheet2.css" />
     <Content Include="Temp\TextTemplate1.txt">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
