--- a/TheWebServices/ServiceLib/packages.config
+++ b/TheWebServices/ServiceLib/packages.config
@@ -8,7 +8,7 @@
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="8.0.1-beta3" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="Sendgrid" version="6.3.1" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net451" />
