--- a/DesignTimeLib/DesignTimeLib.csproj
+++ b/DesignTimeLib/DesignTimeLib.csproj
@@ -36,6 +36,7 @@
     <Compile Include="DesignNew\Minify.cs" />
     <Compile Include="DesignNew\BuildTasks.cs" />
     <Compile Include="DesignNew\SynchronizeDirs.cs" />
+    <Compile Include="DesignNew\XmlToTsx.cs" />
     <Compile Include="Design\BingGoogleTranslators.cs" />
     <Compile Include="Design\Bundle.cs" />
     <Compile Include="Design\CourseMeta.cs" />
