funkcni vs.net author pro Blended verzi

--- a/SolutionToolbar/Resources/App.config
+++ b/SolutionToolbar/Resources/App.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="webAppUrl" value="http://test.langmaster.com/alpha" />
+    <add key="webAppUrl" value="http://blendedtest.langmaster.cz" />
+    <add key="homePage" value="schools/index_cs_cz.html" />
+    <!--<add key="webAppUrl" value="http://test.langmaster.com/alpha" />
     <add key="homePage" value="schools/newea.aspx?lang=en-gb" />
     <add key="ftp.url" value="test.langmaster.com/alpha/rew/web4" />
     <add key="ftp.user" value="deploy" />
     <add key="ftp.password" value="deploy" />
-    <add key="ftp.dir" value="" />
+    <add key="ftp.dir" value="" />-->
   </appSettings>
 </configuration>
