--- a/SolutionToolbar/Resources/App.config
+++ b/SolutionToolbar/Resources/App.config
@@ -3,9 +3,9 @@
   <appSettings>
     <add key="webAppUrl" value="http://blendedtest.langmaster.cz" />
     <add key="homePage" value="schools/index_cs_cz.html" />
-    <!--<add key="webAppUrl" value="http://test.langmaster.com/alpha" />
-    <add key="homePage" value="schools/newea.aspx?lang=en-gb" />
-    <add key="ftp.url" value="test.langmaster.com/alpha/rew/web4" />
+    <!--<add key="webAppUrl" value="http://localhost/web4" />
+    <add key="homePage" value="schools/newea.aspx?lang=en-gb" />-->
+    <!--<add key="ftp.url" value="test.langmaster.com/alpha/rew/web4" />
     <add key="ftp.user" value="deploy" />
     <add key="ftp.password" value="deploy" />
     <add key="ftp.dir" value="" />-->
