rozdeleni Registrace a Aktivace route state

--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -402,7 +402,9 @@
     <TypeScriptCompile Include="wwwroot\Common\validation\templates-bs.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\validation\templates-mdl.tsx" />
     <TypeScriptCompile Include="wwwroot\Common\validation\test.tsx" />
+    <TypeScriptCompile Include="wwwroot\Course\componentsImpl.ts" />
     <TypeScriptCompile Include="wwwroot\Course\course.tsx" />
+    <Content Include="wwwroot\Course\components.ts" />
     <None Include="wwwroot\Course\dict\WordUnderCursor.ts_" />
     <TypeScriptCompile Include="wwwroot\Course\gapFill.ts" />
     <TypeScriptCompile Include="wwwroot\Course\test.tsx" />
