--- a/SolutionToolbar/Resources/PZApp.config
+++ b/SolutionToolbar/Resources/PZApp.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="webAppUrl" value="http://localhost/web4" />
+    <add key="webAppUrl" value="http://localhost/rew" />
     <add key="homePage" value="schools/newea.aspx?lang=en-gb" />
-    <!--<add key="webAppUrl" value="http://blendedtest.langmaster.cz" />
-    <add key="homePage" value="schools/index_cs_cz.html" />-->
+    <add key="ftp.url" value="localhost" />
+    <add key="ftp.user" value="deploy" />
+    <add key="ftp.password" value="deploy" />
+    <add key="ftp.dir" value="" />
   </appSettings>
 </configuration>
